--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ colorama==0.4.6
 contourpy==1.1.1
 cryptography==41.0.5
 cycler==0.12.1
+cython
 Django==4.2.2
 django-crispy-forms==2.0
 docutils<0.19
@@ -59,7 +60,7 @@ kiwisolver==1.4.5
 Markdown==3.4.4
 MarkupSafe==2.1.3
 matplotlib==3.7.2
-numpy==1.26.2
+numpy>=1.21.0
 oauthlib==3.2.2
 openpyxl==3.0.5
 protobuf==4.23.4
@@ -71,8 +72,8 @@ pyOpenSSL==23.3.0
 pytz==2023.3
 redis==4.5.5
 requests==2.31.0
-requests-oauthlib==1.3.1
-scipy==1.10.0
+requests-oauthlib>=1.3.1,<1.4
+scipy==1.9.3
 scikit-learn==1.3.0
 selenium==4.14.0
 six==1.16.0
