--- a/requirements.txt
+++ b/requirements.txt
@@ -47,9 +47,9 @@ Flask==2.3.2
 Flask-Cors==3.0.10
 google-auth==2.24.0
 google-auth-oauthlib==1.1.0
-grpcio==1.48.2
+#grpcio==1.48.2
 gunicorn==23.0.0
-h5py==3.9.0
+#h5py==3.9.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
